tests/ui/moves/move-field-out-of-shared-self.stderr
error[E0507]: cannot move out of `self.tokens` which is behind a shared reference
  --> $DIR/move-field-out-of-shared-self.rs:13:9
   |
LL |         self.tokens
   |         ^^^^^^^^^^^ move occurs because `self.tokens` has type `Vec<isize>`, which does not implement the `Copy` trait
   |
help: consider cloning the value if the performance cost is acceptable
   |
LL |         self.tokens.clone()
   |                    ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0507`.
